# shika

./: .env  Cargo.toml
.shika/: config.yaml  database.yaml
.shika/languages/: java.yaml  rust.yaml
.shika/templates/: example.shika.tera  java.shika.tera
app/: Cargo.toml
app/src/: commands.rs  config.rs  language.rs  main.rs
lib/db/: Cargo.toml
lib/db/src/: lib.rs  mysql.rs  postgres.rs
lib/renderer/: Cargo.toml
lib/renderer/src/: filter.rs  lib.rs
libs/db/src/: mysql.rs
libs/renderer/src/: filter.rs  model.rs
